# beacon

./: .gitignore  README.md
bridge/: package.json  tsconfig.json
bridge/scripts/: com.beacon.bridge.plist  install-launchd.sh  uninstall-launchd.sh
bridge/src/: auth.ts  burndown.ts  cache.ts  ccusage-loader.ts  db.ts  discovery.ts  history.ts  idle-watcher.ts  ntfy.ts  schema.sql  server.ts  spawn.ts  stats.ts
docs/: ARCHITECTURE.md  HOOKS.md  PAIRING.md
hooks/: beacon-hook.sh  install-hooks.sh  uninstall-hooks.sh
mobile/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mobile/android-plugin-ref/: README.md
mobile/android-plugin-ref/manifest/: snippets.xml
mobile/android-plugin-ref/widget/: BeaconWidget.kt  beacon_widget.xml  beacon_widget_info.xml  widget_bg.xml
mobile/android-plugin-ref/ws-service/: BootReceiver.kt  WsService.kt
mobile/scripts/: build-apk.sh
mobile/src/: App.svelte  app.css  main.ts
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/src/: lib.rs
mobile/src/lib/: api.ts  biometric.ts  format.ts  poller.ts  snapshot.ts  stores.ts  types.ts  voice.ts
mobile/src/lib/components/: Crab.svelte  Empty.svelte  EventBlock.svelte  Heatmap.svelte  ModelsTable.svelte  PairDialog.svelte  StatCard.svelte  StatusDot.svelte  StatusIcon.svelte  TerminalLog.svelte
mobile/src/routes/: Home.svelte  Mac.svelte  Session.svelte  Settings.svelte
pair-cli/: package.json  tsconfig.json
pair-cli/src/: index.ts
